# drumviper

./: Cargo.toml  LICENSE
src/: app.rs  drag_export.rs  generator.rs  main.rs  microtiming.rs  midi.rs  models.rs  patterns.rs  style_rules.rs
src/source_patterns/: afro_cuban.rs  basic_patterns.rs  breaks.rs  breaks_kick.rs  breaks_snare.rs  drum_and_bass.rs  drum_rolls.rs  dub.rs  edm.rs  electro.rs  funk_and_soul.rs  ghost_snares.rs  hip_hop.rs  house.rs  hybrid_breaks_short.rs  hybrid_breaks_with_alternate_endings.rs  irregular_breaks.rs  miami_bass.rs  mod.rs  pop.rs  reggaeton.rs  rock.rs  rolling_breaks.rs  standard_breaks.rs
src/ui/: constants.rs  mod.rs  musicality_controls.rs  pattern_grid.rs  top_bar.rs  track_sidebar.rs
