[package]
name = "drumviper"
version = "0.1.0"
edition = "2021"

[dependencies]
iced = { version = "0.13", features = ["canvas"] }
midly = "0.5"
rand = "0.8"
rfd = "0.14"
thiserror = "1"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.5.2"
objc2-app-kit = "0.2.2"
objc2-foundation = "0.2.2"
raw-window-handle = "0.6"
